
3.13  2012-07-24
  - Added remove method to Mojo::DOM.
  - Improved RFC 3986 compliance of Mojo::Parameters.
  - Improved Mojolicious::Plugin::Config log messages. (jberger)
  - Improved documentation.
  - Improved tests.
  - Fixed selector bug in dom method of Mojo::Message.
  - Fixed small charset bug in get command.

3.12  2012-07-20
  - Deprecated Mojo::Home->app_class.
  - Deprecated Mojo::IOLoop->client_class.
  - Deprecated Mojo::IOLoop->server_class.
  - Deprecated Mojo::IOLoop->stream_class.
  - Deprecated Mojo::Message->dom_class.
  - Deprecated Mojo::Message->json_class.
  - Added json method to Mojo::UserAgent::Transactor.
  - Added build_json_tx and post_json methods to Mojo::UserAgent.
  - Added post_json_ok method to Test::Mojo.
  - Added n function to ojo.
  - Improved text_field helper to always set the type attribute. (marty, sri)
  - Improved documentation.
  - Improved tests.
  - Fixed file and content type detection bugs in Mojolicious::Static.
    (marty, sri)

3.11  2012-07-19
  - Added or method to Test::Mojo. (moritz, sri)
  - Added file and serve_asset methods to Mojolicious::Static.
  - Improved default descriptions for many methods in Test::Mojo.
  - Improved Mojo::Cache performance. (nic)
  - Improved documentation.
  - Improved tests.
  - Fixed a few small encoding bugs in Test::Mojo.

3.10  2012-07-17
  - Improved tests.
  - Fixed small bug in Mojo::Asset::File.

3.09  2012-07-16
  - Added spurt function to Mojo::Util.
  - Added spurt method to Mojo::ByteStream.
  - Improved documentation.
  - Improved tests.

3.08  2012-07-14
  - Fixed small Mojo::Template bug.

3.07  2012-07-13
  - Improved template error messages for generator commands and config files.
  - Improved documentation.
  - Improved tests.
  - Fixed small bug in Mojolicious::Plugin::EPRenderer that prevented code to
    be added to templates.
  - Fixed small bug in Mojolicious::Plugin::JSONConfig that prevented code to
    be added to config files.

3.06  2012-07-11