@@ -9,7 +9,7 @@ BEGIN {
   $ENV{MOJO_REACTOR} = 'Mojo::Reactor::Poll';
 }
 
-use Test::More tests => 698;
+use Test::More tests => 708;
 
 # "Wait you're the only friend I have...
 #  You really want a robot for a friend?
@@ -111,6 +111,16 @@ get '/auto_name' => sub {
 get '/query_string' => sub {
   my $self = shift;
   $self->render_text(b($self->req->url->query)->url_unescape);
+};
+
+# GET /multi/*
+get '/multi/:bar' => sub {
+  my $self = shift;
+  my ($foo, $bar, $baz) = $self->param([qw(foo bar baz)]);
+  $self->render(
+    data => join('', $foo, $bar, $baz),
+    test => $self->param(['yada'])
+  );
 };
 
 # GET /reserved
@@ -693,6 +703,16 @@ $t->get_ok('/query_string?http://mojolicio.us/perldoc?foo=bar')
   ->status_is(200)->header_is(Server => 'Mojolicious (Perl)')
   ->header_is('X-Powered-By' => 'Mojolicious (Perl)')
   ->content_is('http://mojolicio.us/perldoc?foo=bar');
+
+# GET /multi/B
+$t->get_ok('/multi/B?foo=A&baz=C')->status_is(200)
+  ->header_is(Server         => 'Mojolicious (Perl)')
+  ->header_is('X-Powered-By' => 'Mojolicious (Perl)')->content_is('ABC');
+
+# GET /multi/B (injection attack)
+$t->get_ok('/multi/B?foo=A&foo=E&baz=C&yada=D&yada=text&yada=fail')
+  ->status_is(200)->header_is(Server => 'Mojolicious (Perl)')
+  ->header_is('X-Powered-By' => 'Mojolicious (Perl)')->content_is('ABC');
 
 # GET /reserved
 $t->get_ok('/reserved?data=just-works')->status_is(200)
