@@ -1,5 +1,6 @@
 
 3.13  2012-07-24
+  - Added multi name support to param method in Mojolicious::Controller.
   - Added remove method to Mojo::DOM.
   - Improved RFC 3986 compliance of Mojo::Parameters.
   - Improved Mojolicious::Plugin::Config log messages. (jberger)
